# CATune

./: .gitignore  README.md  pyproject.toml  requirements.txt
docker/: docker-compose.yml  reset.sh  run.sh  start.sh  stop.sh
scripts/: install_benchbase.sh
src/: run_SMAC.py  run_SMAC_multipenalty.py  run_baseline.py  run_gpbo.py
src/dbms/: dbms_template.py  postgres.py
src/dbms/configs/: postgres.ini
src/dbms/logs/: PgDBMS_log.txt
src/dbms/scripts/: recover_docker_postgres.sh
src/extractor/: CONSTRAINT_EXTRACTION_README.md  cache_pass1.json  constraints_normalized.json  extract_constraints.py  extract_constraints_agent_judge.py  knobs_46.txt  norm_pass1.json  norm_pass2.json  pg13_all.txt  raw_pass1.json  raw_pass2.json  readme.md  relation.json  trigger_coverage.py
src/manual/: official_document_pg13.json  official_document_pg13_all.json  official_document_pg13_candidates.json  official_document_pg13_num_cat.json
src/model_provider/: anthropic.py  gpt.py  llm.py  vllm.py
src/optimizer/: gp_bo.py  smac.py  smac_multipenalty.py  workload_runner.py
src/rules/: check.py  hallucinations.txt  knob-to-knob-relationship.json  knob_info.py  other_constraints.json  rule_lists.py
src/sampler/: topological_sampler.py
src/search_space/: knowledge_based_space.py
src/search_space/knob_info/: all_rules_related_knob_info.json  all_rules_related_knob_info_default.json  all_rules_related_knob_info_reasonable_bound.json  all_rules_related_knob_info_reasonable_bound2.json
src/utils/: manual.py  system_resource.py  visualize.py
(+3 files in other folders)
