[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbtuning"
version = "0.0.1"
description = "DBtuning utilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
# If your code is under src/
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]